remove unused asssets

--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
     <!-- Compiled and minified CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <title>Cover Page Generator</title>
+    <title>USC Cover Page Generator</title>
 
   </head>
   <body>
